<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/category_general_title"
        android:key="category_general_settings">
        <CheckBoxPreference
            android:key="usePatternSettings"
            android:title="@string/usePatternSettings_title"
            android:summary="@string/usePatternSettings_summary"
            android:defaultValue="true"
            android:disableDependentsState="true" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/category_clock_title"
        android:key="category_clock_settings">
        <ListPreference
            android:key="clockType"
            android:title="@string/clockType_title"
            android:summary="@string/clockType_summary"
            android:entries="@array/clockType_entries"
            android:entryValues="@array/clockType_values"
            android:dialogTitle="@string/clockType_title"
            android:defaultValue="@string/clockType_default" />
        <ListPreference
            android:key="numberSystem"
            android:title="@string/numberSystem_title"
            android:summary="@string/numberSystem_summary"
            android:entries="@array/numberSystem_entries"
            android:entryValues="@array/numberSystem_values"
            android:dialogTitle="@string/numberSystem_title"
            android:defaultValue="@string/numberSystem_default" />
        <!--
        <CheckBoxPreference
            android:key="clockNumbers"
            android:title="@string/clockNumbers_title"
            android:summary="@string/clockNumbers_summary"
            android:defaultValue="false" />
        -->
        <!--
        <CheckBoxPreference
            android:key="colorWheel"
            android:title="@string/colorWheel_title"
            android:summary="@string/colorWheel_summary"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="clockDashes"
            android:title="@string/clockDashes_title"
            android:summary="@string/clockDashes_summary"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="displayTime"
            android:title="@string/displaytime_title"
            android:summary="@string/displaytime_summary"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="displayClockHands"
            android:title="@string/displayclockhands_title"
            android:summary="@string/displayclockhands_summary"
            android:defaultValue="false" />
        -->

        <ListPreference
            android:key="typeface"
            android:title="@string/typeface_title"
            android:summary="@string/typeface_summary"
            android:entries="@array/typeface_entries"
            android:entryValues="@array/typeface_values"
            android:dialogTitle="@string/typeface_title"
            android:defaultValue="@string/typeface_default" />
        <ListPreference
            android:key="clockBackground"
            android:title="@string/clockBackground_title"
            android:summary="@string/clockBackground_summary"
            android:entries="@array/clockBackground_entries"
            android:entryValues="@array/clockBackground_values"
            android:dialogTitle="@string/clockBackground_title"
            android:defaultValue="@string/clockBackground_default" />
        <CheckBoxPreference
            android:key="timeRotate"
            android:title="@string/timeRotate_title"
            android:summary="@string/timeRotate_summary"
            android:defaultValue="false"
            android:dependency="usePatternSettings" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/category_time_title"
        android:key="category_time_settings">
        <ListPreference
            android:key="timeSystem"
            android:title="@string/timeSystem_title"
            android:summary="@string/timeSystem_summary"
            android:entries="@array/timeSystem_entries"
            android:entryValues="@array/timeSystem_values"
            android:dialogTitle="@string/timeSystem_title"
            android:defaultValue="@string/timeSystem_default"
            android:dependency="usePatternSettings" />
        <CheckBoxPreference
            android:key="baseConversion"
            android:title="@string/baseConversion_title"
            android:summary="@string/baseConversion_summary"
            android:defaultValue="true"
            android:dependency="usePatternSettings" />
        <CheckBoxPreference
            android:key="timeSeconds"
            android:title="@string/timeSeconds_title"
            android:summary="@string/timeSeconds_summary"
            android:defaultValue="false"
            android:dependency="usePatternSettings" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/category_color_title"
        android:key="category_color_settings">
        <ListPreference
            android:key="colorGamut"
            android:title="@string/colorGamut_title"
            android:summary="@string/colorGamut_summary"
            android:entries="@array/colorGamut_entries"
            android:entryValues="@array/colorGamut_values"
            android:dialogTitle="@string/colorGamut_title"
            android:defaultValue="@string/colorGamut_default"
            android:dependency="usePatternSettings" />
        <CheckBoxPreference
            android:key="colorDaylight"
            android:title="@string/colorDaylight_title"
            android:summary="@string/colorDaylight_summary"
            android:defaultValue="true"
            android:dependency="usePatternSettings" />
        <!--
        <CheckBoxPreference
            android:key="colorSwap"
            android:title="@string/colorSwap_title"
            android:summary="@string/colorSwap_summary"
            android:defaultValue="false" />
        -->
        <CheckBoxPreference
            android:key="colorDuplex"
            android:title="@string/colorDuplex_title"
            android:summary="@string/colorDuplex_summary"
            android:defaultValue="false"
            android:dependency="usePatternSettings" />
    </PreferenceCategory>

</PreferenceScreen>